# Codex-App-Manager_Wangnov

./: .env.example  .gitattributes  .gitignore  .impeccable.md  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  mac-packaged-smoke.yml  release-source.yml  release.yml  win-installer-check.yml  winget.yml
assets/icon.icon/: icon.json
cloudflare/manager-download-router/: README.md  package-lock.json  package.json  vitest.config.mjs  wrangler.jsonc
cloudflare/manager-download-router/src/: index.js
cloudflare/manager-download-router/test/: index.test.js
crates/codex-mac-engine/: Cargo.toml
crates/codex-mac-engine/src/: appcast.rs  apply.rs  codesign.rs  download.rs  lib.rs  limits.rs  network.rs  plan.rs  swap.rs  sys.rs  verify.rs
crates/codex-mac-engine/tests/: parse_and_plan.rs
crates/codex-mac-engine/tests/fixtures/: appcast.xml
crates/codex-theme-engine/: Cargo.toml
crates/codex-theme-engine/src/: cdp.rs  codex_theme.rs  daemon.rs  import.rs  lib.rs  media_server.rs  native.rs  native_hot.rs  payload.rs  theme.rs  transaction.rs
crates/codex-theme-engine/src/runtime/: theme-runtime.js
crates/codex-theme-engine/tests/: real_packages.rs
crates/codex-win-engine/: Cargo.toml
crates/codex-win-engine/src/: app_version.rs  authenticode.rs  capability.rs  checksums.rs  download.rs  lib.rs  manifest.rs  msix.rs  network.rs  plan.rs  portable.rs  process.rs  sys.rs  version.rs  windows_process.rs
docs/: architecture.md  code-signing-policy.md  macos-delta-updates.md  macos-packaged-smoke.md  manifest-contract.md  privacy.md  product-design.md  release.md  roadmap.md  webview-context-menu.md  windows-signing.md
docs/prototypes/: auto-update-settings.html
docs/releases/: FALLBACK.md  TEMPLATE.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.4.1.md  v0.5.0.md
scripts/: assert-signpath-foundation-ready.ps1  cargo-metadata-to-cyclonedx.mjs  check-immutable-releases.mjs  check-release-draft-assets.mjs  check-release-reuse.mjs  check-release-source-ancestor.sh  check-release-tag-protection.mjs  check-release-version.mjs  check-renderer-entry.mjs  finalize-macos.sh  gen-updater-manifest.mjs  gen-updater-manifest.test.mjs  macos-adaptive-icon.sh  macos-packaged-smoke.sh  minisign-verify.mjs  minisign-verify.test.mjs  mirror-release.mjs  mirror-release.test.mjs  notarize-macos.sh  prepare-windows-authenticode.ps1  release-binding.mjs  release-identity-workflow.test.mjs  release-workflow.test.mjs  reuse-release-identity-signature.mjs  sign-macos-app.sh  sign-windows-authenticode.ps1  sync-mirror-identity.test.mjs  sync-mirror.sh  validate-release-manifest.mjs  vendor-binary-delta.sh  verify-release-artifacts.mjs  verify-windows-authenticode.ps1  windows-packaged-smoke.ps1  windows-pe-arch.ps1  write-release-summary.mjs
src/: main.tsx
src-tauri/: Cargo.toml  deny.toml  entitlements.macos.plist  tauri.conf.json  tauri.smoke.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: mac_delta_e2e.rs  win_real_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/installer/: installer.nsi
src-tauri/installer/languages/: German.nsh
src-tauri/macos/: Assets.car
src-tauri/resources/: README.md
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  state.rs
src-tauri/src/adapters/: host.rs  mod.rs
src-tauri/src/app/: atomic_file.rs  codex_self_update.rs  codex_theme.rs  config_health.rs  diagnostics.rs  disk.rs  health_service.rs  install_tx.rs  logging.rs  mac_update.rs  manager_update_handoff.rs  manager_update_runtime.rs  mod.rs  op_phase.rs  operation_outcome.rs  oplock.rs  paths.rs  planner.rs  provenance.rs  settings_store.rs  shell.rs  snapshot.rs  staging.rs  update_check.rs  url_guard.rs  win_update.rs  window_mode.rs
src-tauri/src/domain/: health.rs  installation.rs  manifest.rs  mod.rs  operations.rs  settings.rs  target.rs
src-tauri/src/ports/: installer.rs  mod.rs  payload_repository.rs
src/app/: App.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  Rail.tsx  RootCrashBoundary.test.tsx  RootCrashBoundary.tsx  Sheet.test.tsx  Sheet.tsx  bootstrap.tsx  components.tsx  contextMenuPolicy.test.ts  contextMenuPolicy.ts  diagnostics.ts  errorCopy.test.ts  errorCopy.ts  format.ts  globalErrors.test.ts  globalErrors.ts  i18n.test.ts  i18n.test.tsx  i18n.tsx  icons.tsx  managerUpdate.test.tsx  managerUpdate.tsx  motion.test.tsx  motion.ts  navLock.ts  paths.test.ts  paths.ts  platform.ts  rendererEntry.test.ts  rendererEntry.ts  securityConfig.test.ts  signingPolicyFiles.test.ts  skippedUpdate.test.ts  skippedUpdate.ts  staticCrashFallback.test.ts  staticCrashFallback.ts  styles.css  theme.tsx  (+7 more)
src/app/views/: About.tsx  CodexConfig.tsx  CodexThemes.test.tsx  CodexThemes.tsx  Home.test.tsx  Home.tsx  ManualExistingInstall.tsx  ProgressScreen.tsx  Settings.test.tsx  Settings.tsx  Uninstall.test.tsx  Uninstall.tsx  WinHome.test.tsx  WinHome.tsx  useDownloadProgress.test.tsx  useDownloadProgress.ts  useFocusRecheck.test.ts  useFocusRecheck.ts  useOperationReattach.test.ts  useOperationReattach.ts  useSettingsSaver.test.ts  useSettingsSaver.ts
src/components/: EndpointList.tsx  HealthList.tsx  PlanView.tsx  StatusBadge.tsx
src/hooks/: useManager.ts
src/services/: managerApi.test.ts  managerApi.ts
src/shared/: types.ts
website/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
website/public/img/: hero-dark-1600.avif  hero-dark-2560.avif  hero-dark-960.avif  hero-light-1600.avif  hero-light-2560.avif  hero-light-960.avif
website/scripts/: optimize-images.mjs  readme-banner.mjs  subset-fonts.mjs
website/src/: i18n.ts  main.ts
website/src/locales/: en.ts  zh.ts
website/src/styles/: base.css  pipeline.css  sections.css  (+1 more)
