[package]
name = "codex-app-manager"
# The GUI app is the only [[bin]]. Dev/test harnesses live in examples/ (e.g.
# examples/win_real_smoke.rs) so cargo and tauri never build or bundle them into
# the .app — tauri's bundler copies every bin target, so a harness under src/bin/
# would otherwise ride along in the production app. default-run is kept
# defensively to pin `cargo run` to the app should another src/bin/* be added.
default-run = "codex-app-manager"
version = "0.1.7"
description = "A cross-platform manager for installing and updating mirrored official Codex desktop app packages."
authors = ["Wangnov"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Wangnov/codex-app-mirror"

[lib]
name = "codex_app_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
codex-mac-engine = { path = "../crates/codex-mac-engine" }
codex-win-engine = { path = "../crates/codex-win-engine" }
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "2.0"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }
