[package]
name = "codex-theme-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Asset-based UI theme engine for the Codex desktop app: loopback CDP injection, zero modification of app files. Rust port of codex-theme-studio's core."

[dependencies]
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "net", "time", "sync", "io-util", "macros"] }
tokio-tungstenite = "0.28"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
