[package]
name = "codex-win-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure-logic engine for planning and staging Codex Windows MSIX updates."

[dependencies]
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
sha2 = "0.10"
thiserror = "2.0"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Threading"] }
